fix: Inline code background color in dark mode
Former-commit-id: bee588a9f4b0d3105b451722bef7f3f10282b9e4

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@
   /* Light theme colors */
   --background-color: rgb(255, 255, 255);
   --text-color: rgb(0, 0, 0);
+  --inline-code-background-color: #EEEEEE;
 }
 
 body {
@@ -20,6 +21,7 @@ body {
   :root {
     --background-color: rgb(17, 17, 17);
     --text-color: rgb(240, 240, 240);
+    --inline-code-background-color: #555;
   }
 }
 
@@ -43,8 +45,7 @@ code {
 
  /* <code> directly within paragraphs */
  p > code {
-  /* slight grey */
-  background-color: #EEEEEE;
+  background-color: var(--inline-code-background-color);
   /* ensure the entire <code></code> is on the same line */
   white-space: nowrap;
 }
